[workspace]
members = ["viewer", "web"]
resolver = "3"

[workspace.package]
version = "1.2.0"
authors = ["Asriel Camora <asriel@camora.dev>"]
repository = "https://github.com/WorkingRobot/EXDViewer"
edition = "2024"

[patch.crates-io]
ironworks = { path = "deps/ironworks/ironworks" }
xiv-dl-cache = { path = "deps/ffxiv-downloader/rust/cache" }
xiv-dl-core = { path = "deps/ffxiv-downloader/rust/core" }
