[workspace]
members = ["viewer", "web"]
resolver = "3"

[workspace.package]
version = "1.3.0"
authors = ["Asriel Camora <asriel@camora.dev>"]
repository = "https://github.com/WorkingRobot/EXDViewer"
edition = "2024"

[patch.crates-io]
ironworks = { path = "deps/ironworks/ironworks" }
xiv-dl-cache = { path = "deps/ffxiv-downloader/rust/cache" }
xiv-dl-core = { path = "deps/ffxiv-downloader/rust/core" }
# catppuccin-egui = { git = "https://github.com/Wayfarer-Labs/catppuccin-egui.git", branch = "disable-build-script" }

[profile.release-dbg]
inherits = "release"
debug = true
