[workspace]
members = ["viewer", "web"]
resolver = "3"

[workspace.package]
version = "1.6.0"
authors = ["Asriel Camora <asriel@camora.dev>"]
repository = "https://github.com/WorkingRobot/EXDViewer"
edition = "2024"

[patch.crates-io]
ironworks = { path = "deps/ironworks/ironworks" }
xiv-dl-cache = { path = "deps/ffxiv-downloader/rust/cache" }
xiv-dl-core = { path = "deps/ffxiv-downloader/rust/core" }
catppuccin-egui = { git = "https://github.com/WorkingRobot/egui.git", branch = "egui35" }

[profile.release-dbg]
inherits = "release"
debug = true

# Optimize the audio decoders in dev builds; unoptimized vorbis/HCA decode is ~30x slower.
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-core]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.symphonia-metadata]
opt-level = 3
[profile.dev.package.symphonia-utils-xiph]
opt-level = 3
[profile.dev.package.cridecoder]
opt-level = 3
