[package]
name = "viewer"
description = "Cross-platform FFXIV game data viewer"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "worker"
path = "src/worker/runner.rs"

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
catppuccin-egui = { version = "5.6", default-features = false, features = [
    "egui32",
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
ironworks = { version = "0.4.1", features = ["excel", "sqpack", "tex"] }
ehttp = { version = "0.5", features = ["streaming", "native-async"] }
lru = "0.16"
url = "2.5"
nucleo-matcher = "0.3.1"
anyhow = "1.0"
intmap = "3.1.0"
binrw = "0.15"
num-traits = "0.2"
itertools = "0.14"
rfd = "0.15"
egui_table = "0.4"
# egui_router = "0.4" Terrible library, don't use
egui_extras = { version = "0.32", features = ["http", "image"] }
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
] }
serde_yml = "0.0.12"
serde_json = "1.0"
jsonschema = { version = "0.33", default-features = false }
async-trait = "0.1"
futures-util = "0.3"
egui_logger = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
image_dds = { version = "0.7", default-features = false, features = ["image"] }
either = "1.15"
replace_with = "0.1"
pinned = "0.1"
matchit = "0.8"
zip = { version = "5.0", default-features = false }
base64 = "0.22"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
poll-promise = { version = "0.3", features = ["smol"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
poll-promise = { version = "0.3", features = ["web"] }
web-sys = { version = "0.3", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandleKind",
    "FileSystemPermissionMode",
    "FileSystemHandlePermissionDescriptor",
    "PermissionState",
    "FileReaderSync",
    "DirectoryPickerOptions",
    "FileSystemWritableFileStream",
    "History",
    "PopStateEvent",
    "HtmlCollection",
] }
getrandom = { version = "*", features = [
    "wasm_js",
] } # Fix to allow building for wasm
gloo-worker = "0.5"
serde-wasm-bindgen = "0.6"
indexed-db = "0.4"
web-time = "1.1"
