[package]
name = "exdviewer-web"
authors = ["Asriel Camora <asriel@camora.dev>"]
description = "Backend web server for EXDViewer"
repository = "https://github.com/WorkingRobot/EXDViewer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-lab = "0.24.1"
actix-web-prom = { version = "0.9.0", features = ["process"] }
actix-web-helmet = "0.2.0"
actix-files = "0.6.6"
anyhow = "1.0.95"
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
fs_extra = "1.3.0"
mini-moka = "0.10"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
ironworks = { version = "0.4.1", features = ["sqpack"] }
konst = "0.3.16"
log = "0.4.25"
prometheus = { version = "0.13.4", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "=1.44.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
tokio-util = "0.7.13"
url = "2.5.4"
regex-lite = "0.1"

[dev-dependencies]

[build-dependencies]
ureq = "3.0"

[target.'cfg(unix)'.build-dependencies]
procfs = "0.17"

[patch.crates-io]
ironworks = { path = "../deps/ironworks/ironworks" }
