[package]
name = "web"
description = "Backend web server for EXDViewer"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[features]
trunk_assets = []

[dependencies]
xiv-dl-cache = "*"
xiv-dl-core = "*"
shadow-rs = { version = "1.2", default-features = false }
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-lab = "0.24.1"
actix-web-prom = { version = "0.10.0", features = ["process"] }
actix-web-helmet = "0.2.0"
actix-files = "0.6.6"
async-channel = "2.5.0"
anyhow = "1.0.95"
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
fs_extra = "1.3.0"
mini-moka = "0.10"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
ironworks = { version = "0.4.1", features = ["sqpack"] }
konst = "0.3.16"
log = "0.4.25"
prometheus = { version = "0.14.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.13"
url = "2.5.4"
regex-lite = "0.1"

[build-dependencies]
shadow-rs = "1.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
procfs = "0.17"
