[package]
name = "web"
description = "Backend web server for EXDViewer"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[features]
trunk_assets = []

[dependencies]
xiv-dl-cache = { version = "*", features = ["prometheus"] }
xiv-dl-core = "*"
shadow-rs = { version = "2.0", default-features = false }
actix-cors = "0.7"
actix-web = "4.14"
actix-web-lab = "0.26"
actix-web-prom = { version = "0.10", features = ["process"] }
actix-web-helmet = "1.0"
actix-files = "0.6"
async-channel = "2.5"
anyhow = "1.0"
config = { version = "0.15", default-features = false, features = ["yaml"] }
dotenvy = "0.15"
env_logger = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
fs_extra = "1.3"
mini-moka = "0.10"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.15"
ironworks = { version = "0.4", features = ["sqpack"] }
konst = "0.4"
log = "0.4"
prometheus = { version = "0.14", default-features = false }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "webpki-roots",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
url = "2.5"
regex-lite = "0.1"

# console-subscriber = "0.4"

[build-dependencies]
shadow-rs = "2.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
procfs = "0.18"
